modified activity images for aspect fill

--- a/Unify/Base.lproj/Main.storyboard
+++ b/Unify/Base.lproj/Main.storyboard
@@ -2374,7 +2374,7 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GL4-cI-4gd">
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mXj-d9-oQi">
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mXj-d9-oQi">
                                                             <rect key="frame" x="0.0" y="0.0" width="75" height="75"/>
                                                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                             <constraints>
@@ -2458,7 +2458,7 @@
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1fv-n2-nCj">
                                                             <rect key="frame" x="0.0" y="0.0" width="375" height="75"/>
                                                             <subviews>
-                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pww-pE-Sur">
+                                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pww-pE-Sur">
                                                                     <rect key="frame" x="0.0" y="0.0" width="75" height="75"/>
                                                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <constraints>
@@ -6371,15 +6371,16 @@
                                                         <color key="textColor" red="0.11056222020000001" green="0.20581735670000001" blue="0.43148908019999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="usericon" translatesAutoresizingMaskIntoConstraints="NO" id="Cyl-mt-CCt">
-                                                        <rect key="frame" x="145" y="44" width="20" height="20"/>
+                                                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Cyl-mt-CCt">
+                                                        <rect key="frame" x="157" y="44" width="20" height="20"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="20" id="6a6-KF-kXY"/>
                                                             <constraint firstAttribute="width" constant="20" id="Udf-jZ-o00"/>
                                                         </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.60000002384185791" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YKB-J5-aTK">
-                                                        <rect key="frame" x="169" y="72" width="190" height="20"/>
+                                                        <rect key="frame" x="359" y="72" width="0.0" height="20"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="20" id="iVW-NW-qSa"/>
                                                         </constraints>
@@ -6387,15 +6388,15 @@
                                                         <color key="textColor" red="0.11056222020000001" green="0.20581735670000001" blue="0.43148908019999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icn-phone-grey" translatesAutoresizingMaskIntoConstraints="NO" id="NLJ-pE-clO">
-                                                        <rect key="frame" x="145" y="72" width="20" height="20"/>
+                                                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icn-phone-grey" translatesAutoresizingMaskIntoConstraints="NO" id="NLJ-pE-clO">
+                                                        <rect key="frame" x="157" y="72" width="20" height="20"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="20" id="HOw-fN-jpq"/>
                                                             <constraint firstAttribute="width" constant="20" id="LRL-b5-XxN"/>
                                                         </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.60000002384185791" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6Hf-94-MnX">
-                                                        <rect key="frame" x="169" y="100" width="190" height="20"/>
+                                                        <rect key="frame" x="359" y="100" width="0.0" height="20"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="20" id="o64-In-uTS"/>
                                                         </constraints>
@@ -6403,7 +6404,7 @@
                                                         <color key="textColor" red="0.11056222020000001" green="0.20581735670000001" blue="0.43148908019999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="icn-mail-grey" translatesAutoresizingMaskIntoConstraints="NO" id="Cbp-lY-P2S">
+                                                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="icn-mail-grey" translatesAutoresizingMaskIntoConstraints="NO" id="Cbp-lY-P2S">
                                                         <rect key="frame" x="145" y="100" width="22.5" height="16.5"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="20" id="4iG-p3-DEQ"/>
@@ -6411,7 +6412,7 @@
                                                         </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.60000002384185791" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EJB-2m-EYF">
-                                                        <rect key="frame" x="169" y="44" width="190" height="20"/>
+                                                        <rect key="frame" x="359" y="44" width="0.0" height="20"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="20" id="i7m-p1-EpE"/>
                                                         </constraints>
@@ -6467,19 +6468,16 @@
                                                     <constraint firstItem="w82-N1-5Nc" firstAttribute="centerX" secondItem="TMw-xa-tws" secondAttribute="centerX" id="JFd-uY-nzK"/>
                                                     <constraint firstItem="NLJ-pE-clO" firstAttribute="top" secondItem="Cyl-mt-CCt" secondAttribute="bottom" constant="8" symbolic="YES" id="LsN-ID-rUA"/>
                                                     <constraint firstItem="EA1-il-Xbr" firstAttribute="leading" secondItem="w82-N1-5Nc" secondAttribute="leading" id="Lvg-uu-bYh"/>
-                                                    <constraint firstItem="6Hf-94-MnX" firstAttribute="leading" secondItem="Cbp-lY-P2S" secondAttribute="trailing" constant="4" id="RAT-DA-pwr"/>
                                                     <constraint firstAttribute="trailing" secondItem="tLg-9k-Law" secondAttribute="trailing" id="S5p-ak-II4"/>
                                                     <constraint firstItem="Cbp-lY-P2S" firstAttribute="leading" secondItem="2lF-gB-c8Z" secondAttribute="trailing" constant="8" id="UuQ-EP-6iL"/>
                                                     <constraint firstItem="EJB-2m-EYF" firstAttribute="top" secondItem="tLg-9k-Law" secondAttribute="bottom" constant="3" id="VcK-9X-216"/>
-                                                    <constraint firstItem="NLJ-pE-clO" firstAttribute="leading" secondItem="2lF-gB-c8Z" secondAttribute="trailing" constant="8" id="WKX-mt-RXX"/>
+                                                    <constraint firstItem="NLJ-pE-clO" firstAttribute="leading" secondItem="2lF-gB-c8Z" secondAttribute="trailing" constant="20" id="WKX-mt-RXX"/>
                                                     <constraint firstItem="2lF-gB-c8Z" firstAttribute="leading" secondItem="w82-N1-5Nc" secondAttribute="leading" id="XIK-0w-sEX"/>
-                                                    <constraint firstItem="EJB-2m-EYF" firstAttribute="leading" secondItem="Cyl-mt-CCt" secondAttribute="trailing" constant="4" id="ZHZ-bv-JWj"/>
-                                                    <constraint firstItem="YKB-J5-aTK" firstAttribute="leading" secondItem="NLJ-pE-clO" secondAttribute="trailing" constant="4" id="ctH-U6-LPo"/>
                                                     <constraint firstItem="EA1-il-Xbr" firstAttribute="trailing" secondItem="w82-N1-5Nc" secondAttribute="trailing" id="dQd-ab-e0D"/>
                                                     <constraint firstItem="Cbp-lY-P2S" firstAttribute="top" secondItem="NLJ-pE-clO" secondAttribute="bottom" constant="8" symbolic="YES" id="dSV-4t-p5I"/>
                                                     <constraint firstItem="w82-N1-5Nc" firstAttribute="top" secondItem="2lF-gB-c8Z" secondAttribute="bottom" id="fwF-hq-o67"/>
                                                     <constraint firstItem="AKg-gr-w54" firstAttribute="top" secondItem="TMw-xa-tws" secondAttribute="top" constant="142" id="hdP-to-ZM3"/>
-                                                    <constraint firstItem="Cyl-mt-CCt" firstAttribute="leading" secondItem="2lF-gB-c8Z" secondAttribute="trailing" constant="8" id="hvP-fN-y7I"/>
+                                                    <constraint firstItem="Cyl-mt-CCt" firstAttribute="leading" secondItem="2lF-gB-c8Z" secondAttribute="trailing" constant="20" id="hvP-fN-y7I"/>
                                                     <constraint firstItem="2lF-gB-c8Z" firstAttribute="leading" secondItem="TMw-xa-tws" secondAttribute="leading" id="it0-34-gVD"/>
                                                     <constraint firstItem="2bu-Ww-BAX" firstAttribute="trailing" secondItem="w82-N1-5Nc" secondAttribute="trailing" id="q9B-Lz-lCn"/>
                                                     <constraint firstItem="tLg-9k-Law" firstAttribute="leading" secondItem="2lF-gB-c8Z" secondAttribute="trailing" constant="32" id="qLc-tg-IEP"/>
